--- a/active-swissvale-guide/index.html
+++ b/active-swissvale-guide/index.html
@@ -219,7 +219,7 @@
 </ul>
 
 <h1 id="suggestions">Suggestions?</h1>
-<p>If you have any question or suggestion to improve this</p>
+<p>If you have any question or suggestion to improve this, please <a href="/about">contact me</a>.</p>
 
   </article>
 
