--- a/active-swissvale-guide/index.html
+++ b/active-swissvale-guide/index.html
@@ -7,7 +7,7 @@
     <title>Swissvale activity guide - Julien Delange</title>
     <link rel="alternate" type="application/rss+xml" title="Julien Delange &raquo; Feed" href="/feed.xml" />
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter">
+    <meta name="description" content="List of spots and advices for active people around Swissvale">
     <link rel="canonical" href="http://julien.gunnm.org/active-swissvale-guide/">
 
     
@@ -30,7 +30,7 @@
 
     <!-- Twitter Cards -->
     <meta property="twitter:title" content="Swissvale activity guide" />
-    <meta property="twitter:description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter" />
+    <meta property="twitter:description" content="List of spots and advices for active people around Swissvale" />
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="@juli1pb" />
     <meta property="twitter:creator" content="@juli1pb" />
@@ -42,7 +42,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:image" content="/assets/profile.png" />
     <meta property="og:title" content="Swissvale activity guide" />
-    <meta property="og:description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter" />
+    <meta property="og:description" content="List of spots and advices for active people around Swissvale" />
 
 </head>
 
