--- a/swissvale-active/index.html
+++ b/swissvale-active/index.html
@@ -34,13 +34,13 @@
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="@juli1pb" />
     <meta property="twitter:creator" content="@juli1pb" />
-    <meta property="twitter:image:src" content="/assets/profile.png"/>
+    <meta property="twitter:image:src" content="/assets/frick-park-winter.jpg"/>
 
 
     <!-- Facebook opengraph -->
     <meta property="og:site_name" content="Julien Delange" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="/assets/profile.png" />
+    <meta property="og:image" content="/assets/frick-park-winter.jpg" />
     <meta property="og:title" content="Swissvale activity guide" />
     <meta property="og:description" content="List of spots and advices for active people around Swissvale" />
 
