--- a/running/index.html
+++ b/running/index.html
@@ -118,6 +118,7 @@
 <h1 id="statistics-and-prs">Statistics and PRs</h1>
 <ul>
   <li>#100M: 1</li>
+  <li>#100K: 1</li>
   <li>#50M: 2</li>
   <li>#50K: 4</li>
   <li>#marathons: 8</li>
@@ -134,12 +135,7 @@
 <h1 id="agenda">Agenda</h1>
 
 <h2 id="coming-races">Coming Races</h2>
-
-<ul>
-  <li><a href="http://worldsendultra.com">Worlds End 100K</a> - 05/21/2016&lt;</li>
-  <li><a href="http://www.rachelcarsontrails.org/rct/challenge">Rachel Carson Challenge</a> - 06/18/2016&lt;</li>
-  <li><a href="http://easternstates100.com/">Eastern States 100</a> - 08/13/2016</li>
-</ul>
+<p><em>No coming race for now!</em></p>
 
 <h2 id="on-the-list">On the list</h2>
 
@@ -161,7 +157,8 @@
 
 <h2 id="past-events-amp-achievements">Past events &amp; Achievements</h2>
 <ul>
-  <li><a href="http://www.thepittsburghmarathon.com">Pittsburgh Half-Marathon</a> - pacer for the 1:45 group - 05/01/2016 - <a href="http://results.xacte.com/?mid=79">net time: 1:45:47</a> </li>
+  <li><a href="http://worldsendultra.com">Worlds End 100K</a> - 05/21/2016 - 18:32:56 - 76/90 - <a href="http://www.parunners.com/2016%20RESULTS/Worlds%20End%20Overall.htm">results</a></li>
+  <li><a href="http://www.thepittsburghmarathon.com">Pittsburgh Half-Marathon</a> - pacer for the 1:45 group - 05/01/2016 - <a href="http://results.xacte.com/?mid=79">net time: 1:45:47</a></li>
   <li><a href="http://www.hikerun.com/">Hyner 50K</a> - 04/23/2016 - 7:28:06.92 - 173/258 <a href="http://www.parunners.com/2016%20RESULTS/Hyner%20Overall.htm">results</a></li>
   <li><a href="http://www.mohican50k.com/">Forget the PR 25K</a> - 04/16/2016 - 2:56:22 - 10/165 - <a href="https://ultrasignup.com/results_event.aspx?did=34478">results</a></li>
   <li>Gutbuster 2015, 8 miles - 11/26/2015 - 1:07:15 - <a href="https://www.strava.com/activities/439779090">strava details</a></li>
