--- a/about/index.html
+++ b/about/index.html
@@ -127,6 +127,9 @@
 
 <p>Apart computer science, I am an avid runner that enjoy traveling and discovering countries, cultures and people. I used to run around 70 miles a week, ran several marathons and ultra-marathon in the USA. While I can go on roads, my favorite is on trails in the nature - I can go for a running adventure for hours. I am racing almost every months and maintain a race agenda, <a href="/running/">check it out</a> if you are a runner and want to meet on the trails! I am also providing coaching services., please <a href="/about/">contact me if you are interested</a>.</p>
 
+<h1 id="resume">Resume</h1>
+<p>You can find the last revision of my resume <a href="/resume.pdf">here</a>.</p>
+
 <h1 id="contact">Contact</h1>
 <p>You can contact me by using the following e-mail: <em>firstname</em> <strong>at</strong> <em>gunnm</em> <strong>dot</strong> <em>org</em>. You can also use the links located at the bottom of this page (links to social media).</p>
 
