--- a/swissvale-active/index.html
+++ b/swissvale-active/index.html
@@ -166,9 +166,11 @@ Also, a good source of information about swissvale can be found on the
 
 <h2 id="going-to-frick">Going to Frick</h2>
 
-<p>There are many options to go to Frick. If you go by running/biking/walking, the options are the following:
- * Go down commercial st and turn right at the bottom of commercial (location of Entrance Frick 1 on the map)
- * Use South Braddock and use the Park entrance at the CLASS building (location of Entrance Frick 2 on the map)</p>
+<p>There are many options to go to Frick. If you go by running/biking/walking, the options are the following:</p>
+<ul>
+  <li>Go down commercial st and turn right at the bottom of commercial (location of Entrance Frick 1 on the map)</li>
+  <li>Use South Braddock and use the Park entrance at the CLASS building (location of Entrance Frick 2 on the map)</li>
+</ul>
 
 <p>If you are driving your car, you can park around the park, either at the bottom of commercial, close to the CLASS building or close to the tennis court. The map has some dedicated places to indicate where you can park.</p>
 
