add new article

--- a/running/index.html
+++ b/running/index.html
@@ -153,6 +153,7 @@
   <li><a href="http://www.marathondumedoc.com">Marathon du Medoc</a></li>
   <li><a href="http://www.whiteriver50.com/">White River 50</a></li>
   <li><a href="https://www.cayugatrails50.com/">Cayuga Trail 50</a></li>
+  <li><a href="http://yellowjacketracing.com/races/sehgahunda-trail-marathon-relay">Sehgahunda Trail Marathon</a></li>
 </ul>
 
 <h2 id="past-events-amp-achievements">Past events &amp; Achievements</h2>
