--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="http://julien.gunnm.org/">
 
     
-    <meta name="keywords" content="software engineering, eclipse, modeling, running, ultra-marathon"/>
+    <meta name="keywords" content="software engineering, amazon, aws, eclipse, modeling, running, ultra-marathon"/>
     
 
     <!-- Latest compiled and minified CSS -->
@@ -113,7 +113,7 @@
 <div class="home">
    <div class="intro">
       <p>
-         My name is Julien Delange. I am a software engineer working at the <a href="http://sei.cmu.edu">Carnegie Mellon Software Engineering Institute</a> and an occasional runner for distances between 5K and 100 miles. This website has most of the useful information on my <a href="/projects">research work</a> and <a href="/running">running agenda</a>. I also maintain a <a href="/blog">blog</a> on topics related to software engineering, programming and running. More about how to contact me in the <a href="/about">about section</a>.
+         My name is Julien Delange. I am a software engineer working at the <a href="http://aws.amazon.com">Amazon AWS</a> and an occasional runner for distances between 5K and 100 miles. This website has most of the useful information on my <a href="/projects">research work</a> and <a href="/running">running agenda</a>. I also maintain a <a href="/blog">blog</a> on topics related to software engineering, programming and running. More about how to contact me in the <a href="/about">about section</a>.
       </p>
    </div>
    <div class="lastpost">
