--- a/running/index.html
+++ b/running/index.html
@@ -7,7 +7,7 @@
     <title>Running Agenda and Past Races - Julien Delange</title>
     <link rel="alternate" type="application/rss+xml" title="Julien Delange &raquo; Feed" href="/feed.xml" />
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter">
+    <meta name="description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter">
     <link rel="canonical" href="http://julien.gunnm.org/running/">
 
     
@@ -30,7 +30,7 @@
 
     <!-- Twitter Cards -->
     <meta property="twitter:title" content="Running Agenda and Past Races" />
-    <meta property="twitter:description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter" />
+    <meta property="twitter:description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter" />
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="@juli1pb" />
     <meta property="twitter:creator" content="@juli1pb" />
@@ -42,7 +42,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:image" content="/assets/profile.png" />
     <meta property="og:title" content="Running Agenda and Past Races" />
-    <meta property="og:description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter" />
+    <meta property="og:description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter" />
 
 </head>
 
@@ -158,7 +158,7 @@
   <li><a href="http://yellowjacketracing.com/races/sehgahunda-trail-marathon-relay">Sehgahunda Trail Marathon</a></li>
 </ul>
 
-<h2 id="past-events-amp-achievements">Past events &amp; Achievements</h2>
+<h2 id="past-events--achievements">Past events &amp; Achievements</h2>
 <ul>
   <li><a href="http://worldsendultra.com">Worlds End 100K</a> - 05/21/2016 - 18:32:56 - 76/90 - <a href="http://www.parunners.com/2016%20RESULTS/Worlds%20End%20Overall.htm">results</a></li>
   <li><a href="http://www.thepittsburghmarathon.com">Pittsburgh Half-Marathon</a> - pacer for the 1:45 group - 05/01/2016 - <a href="http://results.xacte.com/?mid=79">net time: 1:45:47</a></li>
@@ -318,7 +318,7 @@
 
 
     <div class="footer-col-3 column">
-      <p class="text">Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter</p>
+      <p class="text">Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter</p>
     </div>
 
   </div>
