--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <title>Julien Delange</title>
     <link rel="alternate" type="application/rss+xml" title="Julien Delange &raquo; Feed" href="/feed.xml" />
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter">
+    <meta name="description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter">
     <link rel="canonical" href="http://julien.gunnm.org/404">
 
     
@@ -30,7 +30,7 @@
 
     <!-- Twitter Cards -->
     <meta property="twitter:title" content="" />
-    <meta property="twitter:description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter" />
+    <meta property="twitter:description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter" />
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="@juli1pb" />
     <meta property="twitter:creator" content="@juli1pb" />
@@ -42,7 +42,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:image" content="/assets/profile.png" />
     <meta property="og:title" content="" />
-    <meta property="og:description" content="Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter" />
+    <meta property="og:description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter" />
 
 </head>
 
@@ -204,7 +204,7 @@ The page you are trying to get is no longer available!
 
 
     <div class="footer-col-3 column">
-      <p class="text">Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter</p>
+      <p class="text">Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter</p>
     </div>
 
   </div>
