--- a/swissvale-active/index.html
+++ b/swissvale-active/index.html
@@ -334,7 +334,7 @@ Also, a good source of information about swissvale can be found on the
 
 
     <div class="footer-col-3 column">
-      <p class="text">Tales of a guy living in Pittsburgh addicted with Computer-Science, Running and Peanut Butter</p>
+      <p class="text">Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter</p>
     </div>
 
   </div>
