--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
     <title>About - Julien Delange</title>
     <link rel="alternate" type="application/rss+xml" title="Julien Delange &raquo; Feed" href="/feed.xml" />
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter">
+    <meta name="description" content="Harder, Better, Faster, Stronger">
     <link rel="canonical" href="http://julien.gunnm.org/about/">
 
     
@@ -30,7 +30,7 @@
 
     <!-- Twitter Cards -->
     <meta property="twitter:title" content="About" />
-    <meta property="twitter:description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter" />
+    <meta property="twitter:description" content="Harder, Better, Faster, Stronger" />
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="@juli1pb" />
     <meta property="twitter:creator" content="@juli1pb" />
@@ -42,7 +42,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:image" content="/assets/profile.png" />
     <meta property="og:title" content="About" />
-    <meta property="og:description" content="Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter" />
+    <meta property="og:description" content="Harder, Better, Faster, Stronger" />
 
 </head>
 
@@ -124,7 +124,9 @@
 
 <p>My name is Julien Delange, <em>hello</em>!</p>
 
-<p>I am currently living in the United States of America, particularly in the beautiful city of Pittsburgh, Pennsylvania. I work as a researcher at <a href="http://www.cmu.edu">Carnegie Mellon University</a>. Before coming in the country of Uncle Sam, I lived for two years in the Netherlands where I worked as a <a href="http://en.wikipedia.org/wiki/Software_engineering">software engineer</a> at the <a href="http://www,esa.int">European Space Agency</a> and survived the Dutch lifestyle! Before riding my bicycle in the country of cheese-makers, I studied in <a href="http://en.wikipedia.org/wiki/Le_Havre">Le Havre</a> and <a href="http://en.wikipedia.org/wiki/Paris">Paris</a>, got a Master degree at <a href="http://www.upmc.fr">University Paris VI</a> and a <a href="https://tel.archives-ouvertes.fr/pastel-00006301/">PhD</a> in Computer Science at <a href="http://www.telecom-paristech.fr">TELECOM ParisTech</a>, which gave me the opportunity to design the first <em>libre</em> partitioned OS: <a href="http://pok.tuxfamily.org">POK</a>.</p>
+<p>I am currently living in the United States of America, particularly in the San Francisco Bay Area.
+I currently work for <a href="https://aws.amazon.com/ebs/">Amazon AWS EBS</a>. I worked before at the <a href="http://sei.cmu.edu">Carnegie Mellon Software Engineering Institute</a> from 2012 to 2017.
+Before coming in the country of Uncle Sam, I lived for two years in the Netherlands where I worked as a <a href="http://en.wikipedia.org/wiki/Software_engineering">software engineer</a> at the <a href="http://www,esa.int">European Space Agency</a> and survived the Dutch lifestyle! Before riding my bicycle in the country of cheese-makers, I studied in <a href="http://en.wikipedia.org/wiki/Le_Havre">Le Havre</a> and <a href="http://en.wikipedia.org/wiki/Paris">Paris</a>, got a Master degree at <a href="http://www.upmc.fr">University Paris VI</a> and a <a href="https://tel.archives-ouvertes.fr/pastel-00006301/">PhD</a> in Computer Science at <a href="http://www.telecom-paristech.fr">TELECOM ParisTech</a>, which gave me the opportunity to design the first <em>libre</em> partitioned OS: <a href="http://pok.tuxfamily.org">POK</a>.</p>
 
 <p>Among other things I did, I used to teach at the <a href="http://www.epita.fr">EPITA</a> engineer school for the <a href="http://gistr.epita.fr">GISTR</a> department. Lectures and lab sessions are focused on software engineering: design methods, programming best practices, architecture and software design, etc. I contributed also to open-source projects such as <a href="http://www.rtems.com">RTEMS</a>, <a href="http://www.tuxfamily.org">Tuxfamily.org</a> or <a href="http://www.debian.org">Debian</a>.</p>
 
@@ -224,7 +226,7 @@
 
 
     <div class="footer-col-3 column">
-      <p class="text">Tales of a guy living in Pittsburgh addicted to Computer-Science, Running and Peanut Butter</p>
+      <p class="text">Harder, Better, Faster, Stronger</p>
     </div>
 
   </div>
