--- a/aadl-book.html
+++ b/aadl-book.html
@@ -68,8 +68,7 @@
         </svg>
       </a>
       <div class="trigger">
-         <a class="page-link" href="">Buy on Amazon.com</a>
-         <a class="page-link" href="#stay-in-touch">Stay in Touch</a>
+         <a class="page-link" href="https://www.amazon.com/dp/B071WHRJY3">Buy on Amazon.com</a>
          <a class="page-link" href="#about-the-author">About the Author</a>
 
       </div>
@@ -86,64 +85,23 @@
 
 <p>This is the first practical book on Model-Based Engineering (MBE). Are you tired of all the boring academic papers and expensive books on Model-Based Engineering that focus on theory? Have you ever spend countless hours to figure out how to really apply <a href="http://www.aadl.info">AADL</a> or MBE?</p>
 
-<p>I feel your pain.</p>
-
 <p>This is why this book exists. This is a practical way to learn and apply the core concepts of Model-Based Engineering. In 150 pages, I guide you through the main concepts of AADL and show how to use it to design and analyze a real-time, critical systems (a safe driving car).</p>
 
 <p>150 pages. Efficient. Practical. Affordable.</p>
 
+<p><a href="https://www.amazon.com/dp/B071WHRJY3"><img src="/assets/aadl-book-3d.jpg" alt="AADL In Practice" /></a></p>
+
 <h1 id="where-to-find-it">Where to find it</h1>
 
 <h2 id="e-book-format">e-Book format</h2>
-<p>The book is available on Amazon.com under the Kindle version.
+<p>The book is available on Amazon.com for the Kindle.
 You can use a Kindle device or use your iOS/Android tablet/phone to read it. Alternatively, this is also possible to read it into your web browser on the Amazon website.</p>
 
-<h2 id="paper-format">Paper format</h2>
-<p>For now, the book is available only on he e-book format. A paperback version will be coming soon.</p>
+<h2 id="paperback-format">Paperback format</h2>
+<p>There is also a paperback version of the book, available on Amazon too.</p>
 
 <h2 id="social-media">Social Media</h2>
 <p>You can look for the official <a href="https://www.facebook.com/aadlinpractice/">Facebook page</a> and you can find me on <a href="https://twitter.com/juli1pb">Twitter</a> as well.</p>
-
-<h1 id="stay-in-touch">Stay in Touch</h1>
-<p>If you want to stay in touch and receives news from the book, please fill this form. You will receive updates about the book: new revision, new version of the model online, etc.</p>
-
-<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
-
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-
-<div id="mc_embed_signup">
-<form action="//aadl-book.us15.list-manage.com/subscribe/post?u=60691a7d11a21b0a0570e31ef&amp;id=a691d46684" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
-    <div id="mc_embed_signup_scroll">
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" />
-</div>
-<div class="mc-field-group">
-	<label for="mce-FNAME">First Name </label>
-	<input type="text" value="" name="FNAME" class="" id="mce-FNAME" />
-</div>
-<div class="mc-field-group">
-	<label for="mce-LNAME">Last Name </label>
-	<input type="text" value="" name="LNAME" class="" id="mce-LNAME" />
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60691a7d11a21b0a0570e31ef_a691d46684" tabindex="-1" value="" /></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" /></div>
-    </div>
-</form>
-</div>
-
-<!--End mc_embed_signup-->
 
 <h1 id="frequently-asked-questions">Frequently Asked Questions</h1>
 
@@ -162,7 +120,7 @@ techniques, you are more than welcome (and even encouraged) to use and/or refere
 <p>Please <a href="/about/">contact me</a> directly and describe explicitly what you need. Please also follow me on <a href="https://twitter.com/juli1pb">Twitter</a> or <a href="https://www.linkedin.com/in/juli1/">LinkedIn</a>. While consulting and training is not my main activity, it is always exciting to hear about great projects!</p>
 
 <h1 id="about-the-author">About the author</h1>
-<p>My name is <a href="http://julien.gunnm.org">Julien Delange</a> and I am a software engineer living in Seattle, WA. I got my PhD in France, worked at the European Agency, at Carnegie Mellon University and now, at Amazon Web Services. You can learn more about me on <a href="http://julien.gunnm.org">my personal website</a>.</p>
+<p>My name is <a href="http://julien.gunnm.org">Julien Delange</a> and I am a software engineer living in San Francisco. I got my PhD in France, worked at the European Agency, at Carnegie Mellon University and now, at Amazon Web Services. You can learn more about me on <a href="http://julien.gunnm.org">my personal website</a>.</p>
 
 <p>I am a user of <a href="http://www.aadl.info">AADL</a> since 2008 and worked with most of the users and tool developers. I have seen the technology being used in aerospace, avionics, medical and automotive applications and participated to tools like <a href="http://www.osate.org">OSATE</a>, <a href="http://www.openaadl.org">Ocarina</a> or more globally, <a href="http://taste.tuxfamily.org">TASTE</a>.</p>
 
