--- a/swissvale-active/index.html
+++ b/swissvale-active/index.html
@@ -29,12 +29,12 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Twitter Cards -->
-    <meta property="twitter:title" content="Swissvale activity guide" />
-    <meta property="twitter:description" content="List of spots and advices for active people around Swissvale" />
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="@juli1pb" />
-    <meta property="twitter:creator" content="@juli1pb" />
-    <meta property="twitter:image:src" content="/assets/frick-park-winter.jpg"/>
+    <meta name="twitter:title" content="Swissvale activity guide" />
+    <meta name="twitter:description" content="List of spots and advices for active people around Swissvale" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@juli1pb" />
+    <meta name="twitter:creator" content="@juli1pb" />
+    <meta name"twitter:image:src" content="/assets/frick-park-winter.jpg"/>
 
 
     <!-- Facebook opengraph -->
