--- a/aadl-book.html
+++ b/aadl-book.html
@@ -29,12 +29,12 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Twitter Cards -->
-    <meta property="twitter:title" content="AADL In Practice" />
-    <meta property="twitter:description" content="Official page of the book AADL In Practice" />
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="@juli1pb" />
-    <meta property="twitter:creator" content="@juli1pb" />
-    <meta property="twitter:image:src" content="/assets/profile.png"/>
+    <meta name="twitter:title" content="AADL In Practice" />
+    <meta name="twitter:description" content="Official page of the book AADL In Practice" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@juli1pb" />
+    <meta name="twitter:creator" content="@juli1pb" />
+    <meta name"twitter:image:src" content="/assets/profile.png"/>
 
 
     <!-- Facebook opengraph -->
