--- a/ohiopyle-training/index.html
+++ b/ohiopyle-training/index.html
@@ -29,12 +29,12 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Twitter Cards -->
-    <meta property="twitter:title" content="Laurel Highland Trail - Gate to 8 - Training Information" />
-    <meta property="twitter:description" content="Harder, Better, Faster, Stronger" />
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="@juli1pb" />
-    <meta property="twitter:creator" content="@juli1pb" />
-    <meta property="twitter:image:src" content="/assets/profile.png"/>
+    <meta name="twitter:title" content="Laurel Highland Trail - Gate to 8 - Training Information" />
+    <meta name="twitter:description" content="Harder, Better, Faster, Stronger" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@juli1pb" />
+    <meta name="twitter:creator" content="@juli1pb" />
+    <meta name"twitter:image:src" content="/assets/profile.png"/>
 
 
     <!-- Facebook opengraph -->
