--- a/swissvale-active/index.html
+++ b/swissvale-active/index.html
@@ -34,7 +34,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@juli1pb" />
     <meta name="twitter:creator" content="@juli1pb" />
-    <meta name"twitter:image:src" content="/assets/frick-park-winter.jpg"/>
+    <meta name="twitter:image:src" content="/assets/frick-park-winter.jpg"/>
 
 
     <!-- Facebook opengraph -->
