--- a/about/index.html
+++ b/about/index.html
@@ -127,7 +127,7 @@
 <p>I currently live in the <a href="https://en.wikipedia.org/wiki/San_Francisco_Bay_Area">San Francisco Bay
 Area</a>.
 I currently work for <a href="http://www.twitter.com">Twitter</a>. I previously
-workked at <a href="https://aws.amazon.com/ebs/">Amazon AWS EBS</a> and at
+worked at <a href="https://aws.amazon.com/ebs/">Amazon AWS EBS</a> and at
 the <a href="http://sei.cmu.edu">Carnegie Mellon Software
 Engineering Institute</a>.
 Before coming in the USA I lived for two years in the Netherlands where I worked
